--- a/beamerfontthemeNicola.sty
+++ b/beamerfontthemeNicola.sty
@@ -21,6 +21,7 @@
 % SOFTWARE.
 
 
-\ProvidesPackage{beamerinnerthemeMoonCloud}
+\usepackage{montserrat}
+\ProvidesPackage{beamerfontthemeNicola}
 
-\useinnertheme{circles}
+\setbeamerfont{text}{family=montserrat}
