--- a/beamerinnerthemeNicola.sty
+++ b/beamerinnerthemeNicola.sty
@@ -21,7 +21,6 @@
 % SOFTWARE.
 
 
-\usepackage{montserrat}
-\ProvidesPackage{beamerfontthemeMoonCloud}
+\ProvidesPackage{beamerinnerthemeNicola}
 
-\setbeamerfont{text}{family=montserrat}
+\useinnertheme{circles}
