--- a/beamerouterthemeNicola.sty
+++ b/beamerouterthemeNicola.sty
@@ -29,7 +29,7 @@
     % colorbox is needed to color the background of the footline
     \begin{beamercolorbox}[wd=\paperwidth, ht=2.25ex, dp=1ex]{footline}
         % with h=0.5 there is a great effect, really
-        \includegraphics[height=0.5cm]{MoonCloudTransparency}
+        % \includegraphics[height=0.5cm]{MoonCloudTransparency}
         \hfill
         % call the right color for displaying the page number
         \usebeamercolor[fg]{page number in foot}
