--- a/beamerthemeNicola.sty
+++ b/beamerthemeNicola.sty
@@ -21,17 +21,17 @@
 % SOFTWARE.
 
 
-\ProvidesPackage{beamerthemeMoonCloud}
+\ProvidesPackage{beamerthemeNicola}
 \mode<presentation>
 
 % decide which fonts we use
-\usefonttheme{MoonCloud}
+\usefonttheme{Nicola}
 % decide the colors we use
-\usecolortheme{MoonCloud}
+\usecolortheme{Nicola}
 % inner theme: how elements inside the presentation such as bullets,
 % enumerations, and so on appears
-\useinnertheme{MoonCloud}
+\useinnertheme{Nicola}
 % this decide how borders (head, foot...)
-\useoutertheme{MoonCloud}
+\useoutertheme{Nicola}
 
 % \titlegraphic{\includegraphics[scale=0.2]{MoonCloudTransparency}}
