--- a/example.tex
+++ b/example.tex
@@ -2,11 +2,11 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-\usetheme{MoonCloud}
+\usetheme{Nicola}
 
-\title{Moon Cloud}
+\title{Nicola's Beamer Theme}
 \date{Date}
-\author{Authors}
+\author{Nicola Bena}
 
 \begin{document}
 
