--- a/beamercolorthemeNicola.sty
+++ b/beamercolorthemeNicola.sty
@@ -1,6 +1,6 @@
 % MIT License
 
-% Copyright (c) 2019 nbena
+% Copyright (c) 2019 Nicola Bena
 
 % Permission is hereby granted, free of charge, to any person obtaining a copy
 % of this software and associated documentation files (the "Software"), to deal
@@ -25,50 +25,66 @@
 
 \mode<presentation>
 
-\definecolor{MoonCloudStandard}{RGB}{43,61,80} %dark blue
-\definecolor{MoonCloudgrey}{RGB}{128,128,128} % grey
-\definecolor{MoonCloudtitle}{RGB}{254,254,254} % white!
-\definecolor{MoonCloudyellow}{RGB}{188,156,16} % a dark yellow
+\definecolor{DarkBlue}{RGB}{43, 61, 80} %dark blue
+\definecolor{DarkGrey}{RGB}{128, 128, 128} % dark grey
+\definecolor{DarkerGrey}{RGB}{191, 191, 191} % a slightly darker grey, used in the footer
+\definecolor{LightGrey}{RGB}{217, 217, 217} % light grey
+\definecolor{VeryLightGrey}{RGB}{230, 230, 230} % a very light grey
+\definecolor{White}{RGB}{254 ,254, 254} % white!
+%\definecolor{Gold}{RGB}{245, 225, 138} % gold-ish
+\definecolor{Goldenrod}{RGB}{218, 165, 32} % "dark" gold
+\definecolor{VeryDarkGoldGrey}{RGB}{124, 124, 80} % a very dark mix between gold and grey
+\definecolor{DarkGoldGrey}{RGB}{225, 225, 208} % a sort of mix between gold and grey
+\definecolor{LightGoldGrey}{RGB}{235, 235, 224} % a sort of mix between gold and grey, but lighter
+\definecolor{VeryLightGoldGrey}{RGB}{245, 245, 239} % a sort of mix between gold and grey, very light
+\definecolor{Orange}{RGB}{255, 148, 77} % a light orange, used for alert?
 
-% \definecolor{MoonCloudblockbody}{RGB}{240,255,255}
-% \definecolor{MoonCloudblockbody}{RGB}{220,220,220}
-\definecolor{MoonCloudBlockBody}{RGB}{220,220,200} %kinda mix betweeb grey and beige
-\definecolor{MoonCloudAlertBlockBody}{RGB}{180,180,180} % grey, darker
-\definecolor{MoonCloudFootline}{RGB}{180,180,180}
+% now applying those colors
 
 % blocks
-\setbeamercolor{block title}{fg=white, bg=MoonCloudStandard}
-\setbeamercolor{block body}{fg=MoonCloudgrey, bg=MoonCloudBlockBody}
-
-\setbeamercolor{block title alerted}{fg=white, bg=MoonCloudStandard}
-\setbeamercolor{block body alerted}{fg=black, bg=MoonCloudAlertBlockBody}
+% normal block
+\setbeamercolor{block title}{fg=White, bg=DarkBlue}
+\setbeamercolor{block body}{fg=DarkBlue, bg=VeryLightGrey}
+% alert block
+\setbeamercolor{block title alerted}{fg=White, bg=DarkBlue}
+\setbeamercolor{block body alerted}{fg=DarkBlue, bg=VeryLightGoldGrey}
 
 % text
-\setbeamercolor{normal text}{fg=MoonCloudStandard}
-\setbeamercolor{alerted text}{fg=black}
-\setbeamercolor{title}{fg=MoonCloudtitle,bg=MoonCloudStandard}
-\setbeamercolor{frametitle}{fg=white, bg=MoonCloudStandard}
-\setbeamercolor{itemize item}{fg=MoonCloudStandard}
-\setbeamercolor{itemize subitem}{fg=MoonCloudStandard}
-\setbeamercolor{itemize subsubitem}{fg=MoonCloudStandard}
-\setbeamercolor{enumerate item}{fg=MoonCloudStandard}
-\setbeamercolor{enumerate subitem}{fg=MoonCloudStandard}
-\setbeamercolor{enumerate subsubitem}{fg=MoonCloudStandard}
-\setbeamercolor{description item}{fg=MoonCloudStandard}
-\setbeamercolor{description subitem}{fg=MoonCloudStandard}
-\setbeamercolor{description subsubitem}{fg=MoonCloudStandard}
+\setbeamercolor{normal text}{fg=DarkBlue}
+\setbeamercolor{alerted text}{fg=Goldenrod}
 
-% doesnt work
-\AtBeginEnvironment{block}{
-    \setbeamercolor{itemize item}{fg=MoonCloudStandard}
-    \setbeamercolor{enumerate item}{fg=MoonCloudStandard}
-}
+\setbeamercolor{title}{fg=White,bg=DarkBlue}
+\setbeamercolor{frametitle}{fg=White, bg=DarkBlue}
 
-\setbeamercolor{footline}{bg=MoonCloudFootline, fg=MoonCloudStandard}
+\setbeamercolor{itemize item}{fg=DarkBlue}
+\setbeamercolor{itemize subitem}{fg=DarkBlue}
+\setbeamercolor{itemize subsubitem}{fg=DarkBlue}
+
+\setbeamercolor{enumerate item}{fg=DarkBlue}
+\setbeamercolor{enumerate subitem}{fg=DarkBlue}
+\setbeamercolor{enumerate subsubitem}{fg=DarkBlue}
+
+% change the numbered bullets
+\setbeamercolor{item projected}{bg=DarkBlue, fg=White}
+
+\setbeamercolor{description item}{fg=DarkBlue}
+\setbeamercolor{description subitem}{fg=DarkBlue}
+\setbeamercolor{description subsubitem}{fg=DarkBlue}
+
+% footer
+\setbeamercolor{footline}{bg=DarkerGrey, fg=DarkBlue}
+
+% toc
+\setbeamercolor{section in toc}{bg=White, fg=DarkBlue}
+\setbeamercolor{subsection in toc}{bg=White, fg=DarkBlue}
+% numbers of sections - not needed since we use
+% item projected
+% \setbeamercolor{section number projected}{bg=DarkBlue, fg=White}
+% \setbeamercolor{subsection number projected}{bg=DarkBlue, fg=White}
 
 % "attributes"
-\setbeamercolor{author}{fg=MoonCloudgrey}
-\setbeamercolor{date}{fg=MoonCloudgrey}
-\setbeamercolor{framesubtitle}{fg=MoonCloudgrey}
+\setbeamercolor{author}{fg=DarkGrey}
+\setbeamercolor{date}{fg=DarkGrey}
+\setbeamercolor{framesubtitle}{fg=DarkGrey}
 
 \mode<all>
