--- a/beamerouterthemeNicola.sty
+++ b/beamerouterthemeNicola.sty
@@ -1,6 +1,6 @@
 % MIT License
 
-% Copyright (c) 2019 nbena
+% Copyright (c) 2019 Nicola Bena
 
 % Permission is hereby granted, free of charge, to any person obtaining a copy
 % of this software and associated documentation files (the "Software"), to deal
@@ -21,7 +21,7 @@
 % SOFTWARE.
 
 
-\ProvidesPackage{beameroterthemeMoonCloud}
+\ProvidesPackage{beamerouterthemeNicola}
 
 \useoutertheme{}
 
