--- a/example.tex
+++ b/example.tex
@@ -1,3 +1,26 @@
+% MIT License
+
+% Copyright (c) 2019 nbena
+
+% Permission is hereby granted, free of charge, to any person obtaining a copy
+% of this software and associated documentation files (the "Software"), to deal
+% in the Software without restriction, including without limitation the rights
+% to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+% copies of the Software, and to permit persons to whom the Software is
+% furnished to do so, subject to the following conditions:
+
+% The above copyright notice and this permission notice shall be included in all
+% copies or substantial portions of the Software.
+
+% THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+% IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+% FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+% AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+% LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+% OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+% SOFTWARE.
+
+
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -10,14 +33,43 @@
 
 \begin{document}
 
+\AtBeginSection[]
+{
+  \begin{frame}
+    \frametitle{Outline}
+    \footnotesize
+    \tableofcontents[currentsection]
+  \end{frame}
+}
+
 \begin{frame}
     \titlepage
 \end{frame}
+
+\section{Section 1}
 
 \begin{frame}
     \frametitle{Title}
     This is normal text \alert{this is alerted text}, while this is \textbf{in bold},
     and \textit{in italic}.
+
+    List:
+    \begin{itemize}
+        \item item 1
+        \item item 2
+    \end{itemize}
+
+    Enumerate outside the block
+    \begin{enumerate}
+        \item item 1
+        \item item 2
+    \end{enumerate}
+\end{frame}
+
+\section{Section 1}
+
+\begin{frame}
+    \frametitle{Title (2)}
 
     \begin{block}{Title -- block}
         \begin{enumerate}
@@ -26,20 +78,10 @@
         \end{enumerate}
     \end{block}
 
-    List:
-    \begin{itemize}
-        \item item 1
-        \item item 2
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
-    \frametitle{Title (2)}
-
     \begin{alertblock}{Title -- alert}
         Text in an alert block
         \begin{itemize}
-            \item alert!
+            \item \alert{alert!}
         \end{itemize}
         
     \end{alertblock}
