--- a/beamercolorthemenicola.sty
+++ b/beamercolorthemenicola.sty
@@ -1,6 +1,6 @@
 % MIT License
 
-% Copyright (c) 2019 Nicola Bena
+% Copyright (c) 2020 Nicola Bena
 
 % Permission is hereby granted, free of charge, to any person obtaining a copy
 % of this software and associated documentation files (the "Software"), to deal
@@ -21,14 +21,13 @@
 % SOFTWARE.
 
 
-\ProvidesPackage{beamercolorthemeNicola}
+\ProvidesPackage{beamercolorthemenicola}
 
 \mode<presentation>
 
 \definecolor{DarkBlue}{RGB}{43, 61, 80} %dark blue
 \definecolor{DarkGrey}{RGB}{128, 128, 128} % dark grey
-\definecolor{DarkerGrey}{RGB}{191, 191, 191} % a slightly darker grey, used in the footer
-\definecolor{LightGrey}{RGB}{217, 217, 217} % light grey
+\definecolor{LightGrey}{RGB}{191, 191, 191} % light grey, used in the footer
 \definecolor{VeryLightGrey}{RGB}{230, 230, 230} % a very light grey
 \definecolor{White}{RGB}{254 ,254, 254} % white!
 %\definecolor{Gold}{RGB}{245, 225, 138} % gold-ish
@@ -72,7 +71,7 @@
 \setbeamercolor{description subsubitem}{fg=DarkBlue}
 
 % footer
-\setbeamercolor{footline}{bg=DarkerGrey, fg=DarkBlue}
+\setbeamercolor{footline}{bg=LightGrey, fg=DarkBlue}
 
 % toc
 \setbeamercolor{section in toc}{bg=White, fg=DarkBlue}
@@ -86,5 +85,6 @@
 \setbeamercolor{author}{fg=DarkGrey}
 \setbeamercolor{date}{fg=DarkGrey}
 \setbeamercolor{framesubtitle}{fg=DarkGrey}
+\setbeamercolor{institute}{fg=DarkGrey}
 
 \mode<all>
