--- a/beamerinnerthemenicola.sty
+++ b/beamerinnerthemenicola.sty
@@ -1,6 +1,6 @@
 % MIT License
 
-% Copyright (c) 2019 Nicola Bena
+% Copyright (c) 2020 Nicola Bena
 
 % Permission is hereby granted, free of charge, to any person obtaining a copy
 % of this software and associated documentation files (the "Software"), to deal
@@ -21,6 +21,6 @@
 % SOFTWARE.
 
 
-\ProvidesPackage{beamerinnerthemeNicola}
+\ProvidesPackage{beamerinnerthemenicola}
 
 \useinnertheme{circles}
