--- a/beamerouterthemenicola.sty
+++ b/beamerouterthemenicola.sty
@@ -1,6 +1,6 @@
 % MIT License
 
-% Copyright (c) 2019 Nicola Bena
+% Copyright (c) 2020 Nicola Bena
 
 % Permission is hereby granted, free of charge, to any person obtaining a copy
 % of this software and associated documentation files (the "Software"), to deal
@@ -21,17 +21,22 @@
 % SOFTWARE.
 
 
-\ProvidesPackage{beamerthemeNicola}
-\mode<presentation>
+\ProvidesPackage{beamerouterthemenicola}
 
-% decide which fonts we use
-\usefonttheme{Nicola}
-% decide the colors we use
-\usecolortheme{Nicola}
-% inner theme: how elements inside the presentation such as bullets,
-% enumerations, and so on appears
-\useinnertheme{Nicola}
-% this decide how borders (head, foot...)
-\useoutertheme{Nicola}
+\useoutertheme{}
 
-% \titlegraphic{\includegraphics[scale=0.2]{MoonCloudTransparency}}
+\setbeamertemplate{footline}{
+    % colorbox is needed to color the background of the footline
+    \begin{beamercolorbox}[wd=\paperwidth, ht=2.25ex, dp=1ex]{footline}
+        % with h=0.5 there is a great effect, really
+        % \includegraphics[height=0.5cm]{MoonCloudTransparency}
+        \hfill
+        % call the right color for displaying the page number
+        \usebeamercolor[fg]{page number in foot}
+        % actually I don't know what ken1em means ;)
+        \insertframenumber\,/\,\inserttotalframenumber\kern1em%
+    \end{beamercolorbox}
+}
+
+% no navigation symbols which are quite not useful
+\setbeamertemplate{navigation symbols}{}
