--- a/example.tex
+++ b/example.tex
@@ -1,6 +1,6 @@
 % MIT License
 
-% Copyright (c) 2019 nbena
+% Copyright (c) 2020 Nicola Bena
 
 % Permission is hereby granted, free of charge, to any person obtaining a copy
 % of this software and associated documentation files (the "Software"), to deal
@@ -25,7 +25,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-\usetheme{Nicola}
+\usetheme{nicola}
 
 \title{Nicola's Beamer Theme}
 \date{Date}
